--- a/movie-actor-ranking-app/package.json
+++ b/movie-actor-ranking-app/package.json
@@ -2,6 +2,7 @@
   "name": "mar-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,23 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.1",
-    "@react-aria/ssr": "^3.9.4",
-    "@react-aria/visually-hidden": "^3.8.12",
-    "@types/node": "20.12.7",
-    "@types/react": "18.2.77",
-    "@types/react-dom": "18.2.25",
-    "autoprefixer": "10.4.19",
+    "@heroui/react": "^2.8.5",
+    "@react-aria/ssr": "^3.9.10",
+    "@react-aria/visually-hidden": "^3.8.28",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "intl-messageformat": "^10.5.14",
-    "next": "14.2.0",
-    "next-themes": "^0.3.0",
-    "postcss": "8.4.38",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-variants": "^0.2.1",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "framer-motion": "^12.23.24",
+    "intl-messageformat": "^10.7.18",
+    "next": "16.0.3",
+    "next-themes": "^0.4.6",
+    "postcss": "8.5.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwind-variants": "^3.1.1",
+    "tailwindcss": "4.1.17",
+    "typescript": "5.9.3"
   }
 }
