--- a/movie-actor-ranking-api/Dockerfile
+++ b/movie-actor-ranking-api/Dockerfile
@@ -1,12 +1,32 @@
-FROM python:3.12
+FROM python:3.12-slim
 
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:0.9.10 /uv /uvx /bin/
+
+# Change the working directory to the `code` directory
 WORKDIR /code
 
-COPY requirements.txt .
+# Enable bytecode compilation
+ENV UV_COMPILE_BYTECODE=1
 
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
+# Copy from the cache instead of linking since it's a mounted volume
+ENV UV_LINK_MODE=copy
 
+# Install dependencies (without the project itself)
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    uv sync --frozen --no-install-project
+
+# Copy the project into the image
 COPY . .
+
+# Sync the project
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen
+
+# Place executables in the environment at the front of the path
+ENV PATH="/code/.venv/bin:$PATH"
 
 EXPOSE 3100
 
